# finacial-analyst

./: HOSTING.md  README.md  TROUBLESHOOTING.md  app.py  building-financial-analyst.ipynb  debug_data.py  financial_engine.py  pyproject.toml  quant_utils.py  report_generator.py  requirements.txt  run.bat  test_crew_logic.py
